--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, consectetur.
         </p>
+
+        <button>
+            Welcome to It center
+        </button>
     </div>
 </body>
 </html>
