--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="main-block">
-        <h1 class="main-block-message">Welcome to IT School</h1>
+        <h1 class="main-block-message">Welcome to IT School Remote</h1>
 
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, consectetur.
