--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="main-block">
-        <h1 class="main-block-message">Welcome to IT School Remote</h1>
+        <h1 class="main-block-message">Welcome to IT School Hren</h1>
 
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, consectetur.
